# kaoyan-focus

./: .editorconfig  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  LICENSE  NOTICE.md  README.md  SECURITY.md  SUPPORT.md  card-radius-scan.json  check-msvc-env.bat  index.html  package-lock.json  package.json  ultrafocus_ui2.xml  ultrafocus_ui3.xml  任务流程.md  开发者AI开发与PR提交流程.md  技术路线.md  项目完整链路说明.md  项目开发规范（AI协作）.md  项目文件结构说明.md
.codex-tmp/magi-pmo-sprint2/: state.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/assets/: README.md
scripts/: check-rust.mjs  generate-latest-json.mjs  prepare-release.mjs  release-auto.mjs  release-base-url.txt  release-check.mjs  release-config.mjs  release-win-update.mjs  release-win.mjs  smoke-core-flow.mjs  tag-release.mjs  test-clipboard-cleanup.mjs  test-dashboard-analytics.mjs  test-download-cleanup.mjs  test-reminder-sound-priority.mjs  test-system-diagnostic.mjs
src/: App.tsx  components.css  main.tsx  motion.css  navigation.tsx  navigationEvents.ts  professional-ui.css  styles.css  theme-light.css  theme-variants.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dashboard/: analytics.js  app.js  index.html  styles.css
src-tauri/src/: background_tasks.rs  credential.rs  dashboard_server.rs  lib.rs  main.rs  runtime_health.rs  sync_package.rs
src-tauri/src/commands/: alarm.rs  caldav.rs  checklist.rs  email.rs  feishu.rs  focus.rs  health.rs  monitor.rs  review.rs  schedule.rs  settings.rs  sync.rs  whitelist.rs
src-tauri/src/commands/feishu/: auth.rs  calendar.rs  client.rs  links.rs  mod.rs  rebuild.rs  runs.rs  settings.rs  sync.rs  tasks.rs  tests.rs  utils.rs
src-tauri/src/commands/focus/: helpers.rs  mod.rs  models.rs  sessions.rs  state.rs  stats.rs  study_mode.rs  subjects.rs  sync_trigger.rs
src-tauri/src/commands/sync/: backup.rs  logging.rs  mod.rs  models.rs  object_storage.rs  object_storage_protocol.rs  runs.rs  webdav.rs  webdav_helpers.rs
src-tauri/src/focus/: session.rs  subject.rs
src-tauri/src/storage/: db.rs
src-tauri/src/sync_package/: export.rs  identity.rs  import.rs  merge.rs  mod.rs  models.rs  tests.rs
src-tauri/src/whitelist/: app.rs  matcher.rs  mod.rs
src-tauri/src/windows/: browser_url.rs  focus_widget.rs  foreground.rs  mod.rs  potplayer.rs  running_processes.rs  window_control.rs
src-tauri/updater/: tauri-update.key.pub
src/components/: AppErrorBoundary.tsx  ConfirmDialog.tsx  Layout.tsx  ScheduleDrawer.tsx  TodayPlanDrawer.tsx  UpdateNotification.css  UpdateNotification.tsx
src/hooks/: useAppBackgroundTasks.ts  useConfirmDialog.tsx
src/pages/: AlarmPage.tsx  ChecklistPage.tsx  FocusPage.tsx  (+7 more)
(+526 files in other folders)
