[package]
name = "kaoyan-focus"
version = "0.1.0"
description = "Windows study focus app for exam preparation"
authors = ["kaoyan-focus"]
edition = "2021"

[lib]
name = "kaoyan_focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
