[package]
name = "kaoyan-focus"
version = "0.1.2"
description = "Windows study focus app for exam preparation"
authors = ["kaoyan-focus"]
edition = "2021"

[lib]
name = "kaoyan_focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
