[package]
name = "kaoyan-focus"
version = "1.0.0"
description = "Windows study focus app for exam preparation"
authors = ["kaoyan-focus"]
edition = "2021"

[lib]
name = "kaoyan_focus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
uuid = { version = "1", features = ["v4"] }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-types = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-notification = "2.3.3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7.2"
